# mcp-tool-server

./: .gitignore  Cargo.toml  README.md  config.example.toml
mcp-config-cli/: Cargo.toml  README.md
mcp-config-cli/src/: main.rs
mcp-test-sandbox/: Cargo.toml
schenectady-transit/: Cargo.toml
schenectady-transit/src/: geocoder.rs  gtfs.rs  main.rs  router.rs  util.rs
src/: config.rs  main.rs  protocol.rs  tool.rs
