[package]
name = "schenectady-transit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "schenectady-transit"
path = "src/main.rs"

[dependencies]
anyhow  = "1"
clap    = { version = "4", features = ["derive"] }
csv     = "1"
chrono  = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
osmpbf  = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
zip     = "2"
